--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,13 @@
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-core</artifactId>
 			<version>1.3.1</version>
-		</dependency>		
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
