--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -69,14 +81,19 @@
 			<artifactId>resilience4j-all</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-core -->
 		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-core</artifactId>
 			<version>1.3.1</version>
-		</dependency>		
+		</dependency>
 
+		<dependency>
+			<groupId>org.mitre.dsmiley.httpproxy</groupId>
+			<artifactId>smiley-http-proxy-servlet</artifactId>
+			<version>1.11</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
